--- a/angular.json
+++ b/angular.json
@@ -27,9 +27,15 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "src/theme.scss",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
-            "scripts": [],
+            "scripts": [
+              "./node_modules/@angular/material/bundles/material.umd.js",
+              "./node_modules/@angular/cdk/bundles/cdk-platform.umd.js",
+              "./node_modules/@angular/cdk/bundles/cdk-a11y.umd.js"
+            ],
             "es5BrowserSupport": true
           },
           "configurations": {
