--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,8 @@
             "styles": [
               "src/styles.scss",
               "src/theme.scss",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css"
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": [
               "./node_modules/@angular/material/bundles/material.umd.js",
