--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~9.1.7",
     "bootstrap": "^4.5.0",
     "core-js": "^2.5.4",
+    "ngx-toastr": "^12.0.1",
     "rxjs": "~6.5.5",
     "tslib": "^1.9.0",
     "zone.js": "~0.10.3"
