--- a/angular.json
+++ b/angular.json
@@ -143,5 +143,8 @@
       }
     }
   },
-  "defaultProject": "todo-frontend"
+  "defaultProject": "todo-frontend",
+  "cli": {
+    "analytics": false
+  }
 }
