--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~9.1.7",
     "bootstrap": "^4.5.0",
     "core-js": "^2.5.4",
+    "ng-circle-progress": "^1.5.1",
     "ngx-toastr": "^12.0.1",
     "rxjs": "~6.5.5",
     "tslib": "^1.9.0",
