--- a/package.json
+++ b/package.json
@@ -18,16 +18,22 @@
     "@angular/core": "~9.1.7",
     "@angular/flex-layout": "^9.0.0-beta.31",
     "@angular/forms": "~9.1.7",
+    "@angular/localize": "^9.1.9",
     "@angular/material": "^9.2.3",
     "@angular/platform-browser": "~9.1.7",
     "@angular/platform-browser-dynamic": "~9.1.7",
     "@angular/router": "~9.1.7",
+    "@ng-bootstrap/ng-bootstrap": "^6.1.0",
+    "angular-calendar": "^0.28.16",
     "bootstrap": "^4.5.0",
     "core-js": "^2.5.4",
+    "date-fns": "^2.14.0",
     "ng-circle-progress": "^1.5.1",
     "ngx-toastr": "^12.0.1",
+    "npm": "^6.14.5",
     "rxjs": "~6.5.5",
     "tslib": "^1.9.0",
+    "webpack": "^4.43.0",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
